# sol-e2e

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: just.yaml
docker/: Dockerfile.lighthouse  Dockerfile.reth  Dockerfile.validator  docker-compose.yaml
docker/data/: genesis.json  jwt.hex
docker/data/testnet/: config.yaml
solidity/: erc20.sol
src/: lib.rs  tests.rs
src/relayer/: mod.rs
src/tests/: mod.rs
src/tests/network/: anvil.rs  env.rs  ethpkg.rs  mod.rs
src/tests/scenario/: beacon.rs  erc20.rs  finality.rs  mod.rs  relayer.rs
